--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
